--- a/.env
+++ b/.env
@@ -8,3 +8,12 @@ DB_PASSWORD=passw0rd
 DB_HOST=localhost
 DB_PORT=55432
 DB_DATABASE=backend
+
+OAUTH2_CLIENT_ID=
+OAUTH2_CLIENT_SECRET=
+
+OAUTH2_CLIENT_ID=
+OAUTH2_CLIENT_SECRET=
+OAUTH2_REDIRECT_URL=http://localhost:8080/oauth2/callback
+
+REDIS_URL=localhost:6379
