--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ADDR=:8080
 APP_RUN_MODE=debug
 
 DB_CONNECTION=postgres
-DB_USERNAME=postgres
+DB_USERNAME=root
 DB_PASSWORD=passw0rd
 DB_HOST=localhost
 DB_PORT=55432
