--- a/.env
+++ b/.env
@@ -14,6 +14,6 @@ OAUTH2_CLIENT_SECRET=
 
 OAUTH2_CLIENT_ID=
 OAUTH2_CLIENT_SECRET=
-OAUTH2_REDIRECT_URL=http://localhost:8080/oauth2/callback
+OAUTH2_REDIRECT_URL=http://localhost:3000/login
 
 REDIS_URL=localhost:6379
