--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,7 +24,7 @@ jobs:
     - name: Build and push Docker images
       uses: docker/build-push-action@v1
       env:
-        git_hash: ${{ $(git rev-parse --short "$GITHUB_SHA") }}
+        git_hash: $(git rev-parse --short "$GITHUB_SHA")
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
