--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,4 +29,4 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: namtx/nimblelink-backend
-        tags: latest
+        tags: ${{ env.git_hash }}
