--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,7 +20,10 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
+    - name: Get short git hash
+      run: |
+        echo "::set-env name=GIT_HASH::$(git rev-parse --short $GITHUB_SHA)"
+
     - name: Build and push Docker images
       uses: docker/build-push-action@v1
       env:
@@ -29,4 +32,4 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: namtx/nimblelink-backend
-        tags: ${{ env.git_hash }}
+        tags: ${{ env.GIT_HASH }}
