--- a/.env
+++ b/.env
@@ -16,4 +16,4 @@ OAUTH2_CLIENT_ID=
 OAUTH2_CLIENT_SECRET=
 OAUTH2_REDIRECT_URL=http://localhost:3000/login
 
-REDIS_URL=localhost:6379
+FRONTEND_URL=https://nimble-link.vercel.app
