--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 APP_SECRET_KEY=fDkxKNZmmKgni/tus7ByRinf
-APP_ADDR=:8080
-APP_RUN_MODE=debug
+PORT=8080
+APP_ENV=release
+APP_RUN_MODE=release
 
 DB_CONNECTION=postgres
 DB_USERNAME=root
