Add verify_token API

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_SECRET_KEY=fDkxKNZmmKgni/tus7ByRinf
 PORT=8080
-APP_ENV=release
-APP_RUN_MODE=release
+APP_ENV=debug
+APP_RUN_MODE=debug
 
 DB_CONNECTION=postgres
 DB_USERNAME=root
